--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
       <div class="cars-intro__holder">
         <h1 class="cars-intro__title ff--turnip">Drive home today in your brand new car</h1>
-        <a href="#" class="ff--kandin cars-intro__btn">Explore cars</a>
+        <a href="#" class="ff--kandin cars-intro__btn btn">Explore cars</a>
       </div>
 
       <div class="cars-intro__cars">
@@ -372,6 +372,10 @@
       </div>
 
     </section>
+
+    <!--Skip animation or reload animation buttons-->
+    <a href="#" class="skip-content btn ff--kandin">Skip Animation</a>
+    <a href="#" class="reload-animation btn ff--kandin">Reload animation</a>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/EasePack.min.js"></script>
